--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>SHUBHAM SINGH - Web Developer</title>
-  <meta name="title" content="Kane Williams - Web & App Developer">
+  <meta name="title" content="Shubham Singh - Web & App Developer">
   <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
