--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>SHUBHAM SINGH - Web Developer</title>
   <meta name="title" content="Shubham Singh - Web & App Developer">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <meta name="description" content="This is a personal portfolio html template made by Shubham">
 
   <!-- 
     - favicon
